<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginBottom="4dp"
        tools:src="@color/cardview_dark_background">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="160dp"
            android:layout_height="230dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerInside"
            tools:src="@color/blue_0"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/title"/>

        <TextView
            android:id="@+id/tv_item_author"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_button"
            android:layout_below="@+id/tv_item_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/mangaka"/>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_toRightOf="@id/img_item_photo"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_bookmark"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bookmark"
                android:textSize="10sp"/>

            <Button
                android:id="@+id/btn_set_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/read"
                android:textSize="10sp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>